smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/unclosed-string3.smithy
// Parse error at line 6, column 1 near `[EOF]`: Expected: '"', but found '[EOF]'
namespace abc.def
@foo("
hello
there\"
